<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".GpsTrackerActivity$PlaceholderFragment">

    <TextView
        android:id="@+id/latitudeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/latitude" />

    <TextView
        android:id="@+id/longitudeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/latitudeTextView"
        android:layout_below="@+id/latitudeTextView"
        android:layout_marginBottom="5dp"
        android:text="@string/longitude" />

    <TextView
        android:id="@+id/accuracyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/latitudeTextView"
        android:layout_below="@+id/longitudeTextView"
        android:layout_marginBottom="5dp"
        android:text="@string/accuracy" />

    <TextView
        android:id="@+id/providerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/latitudeTextView"
        android:layout_below="@+id/accuracyTextView"
        android:layout_marginBottom="5dp"
        android:text="@string/provider" />

    <TextView
        android:id="@+id/timeStampTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/latitudeTextView"
        android:layout_below="@+id/providerTextView"
        android:layout_marginBottom="5dp"
        android:text="@string/timeStamp" />

    <Button
        android:id="@+id/startTrackingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timeStampTextView"
        android:layout_alignLeft="@+id/latitudeTextView"
        android:onClick="startTracking"
        android:layout_marginTop="10dp"
        android:text="@string/start_tracking" />

</RelativeLayout>
